--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="./assets/images/icon-192x192.png"
+      href="./assets/images/cewe.png"
     />
     <meta name="theme-color" content="#212529" />
     <meta name="color-scheme" content="dark" />
