fix thumbnail image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <meta
       property="og:image"
-      content="https://dewanakl.github.io/undangan/assets/images/bg.jpeg"
+      content="https://dewanakl.github.io/undangan/assets/images/bg.jpg"
     />
     <meta property="og:image:type" content="image/jpeg" />
     <meta
@@ -39,7 +39,7 @@
     />
     <link
       rel="preconnect"
-      href="https://undangan-api-gules.vercel.app"
+      href="https://undangan-api-nine.vercel.app"
       crossorigin="anonymous"
     />
     <link
