--- a/index.html
+++ b/index.html
@@ -19,19 +19,16 @@
       property="og:description"
       content="Website Undangan Pernikahan Asry & Melki Secara Online"
     />
-    <meta
-      property="og:image"
-      content="https://dewanakl.github.io/undangan/assets/images/bg.jpg"
-    />
+    <meta property="og:image" content="./assets/images/bg.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta
+    <!-- <meta
       property="og:image:alt"
       content="https://dewanakl.github.io/undangan/"
-    />
+    /> -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Undangan" />
-    <meta property="og:url" content="https://dewanakl.github.io/undangan/" />
+    <!-- <meta property="og:url" content="https://dewanakl.github.io/undangan/" /> -->
     <link
       rel="preconnect"
       href="https://cdn.jsdelivr.net"
