--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
           <h1 class="font-estetik my-4" style="font-size: 3rem">
             Asry & Melki
           </h1>
-          <h4>Rabu, 16 Juni 2023</h4>
-          <a
+          <h4>Jumat, 16 Juni 2023</h4>
+          <!-- <a
             class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2"
             target="_blank"
             href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Wahyu%20and%20Riski&details=The%20Wedding%20of%20Wahyu%20and%20Riski%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86"
           >
             <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
-          </a>
+          </a> -->
           <div
             class="d-flex justify-content-center align-items-center mt-4 mb-2"
           >
@@ -315,6 +315,7 @@
             <div class="overflow-x-hidden">
               <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                 <h1 class="font-estetik" style="font-size: 2rem">Akad</h1>
+                <p>Jumat, 16 Juni 2023</p>
                 <p>Pukul 10.00 WITA - Selesai</p>
                 <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
                   <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem">
@@ -325,6 +326,7 @@
 
               <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                 <h1 class="font-estetik" style="font-size: 2rem">Resepsi</h1>
+                <p>Jumat, 16 Juni 2023</p>
                 <p>Pukul 13.00 WITA (Bada' Sholat Jumat) - Selesai</p>
                 <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
                   <a
