--- a/index.html
+++ b/index.html
@@ -17,18 +17,13 @@
     <meta property="og:title" content="Undangan Pernikahan Asry & Melki" />
     <meta
       property="og:description"
-      content="Website Undangan Pernikahan Asry & Melki Secara Online"
+      content="Website Undangan Pernikahan Asry & Melki"
     />
     <meta property="og:image" content="./assets/images/bg.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
-    <!-- <meta
-      property="og:image:alt"
-      content="https://dewanakl.github.io/undangan/"
-    /> -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Undangan" />
-    <!-- <meta property="og:url" content="https://dewanakl.github.io/undangan/" /> -->
     <link
       rel="preconnect"
       href="https://cdn.jsdelivr.net"
